topsis-scheduler/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scheduler-system
  labels:
    name: scheduler-system
