topsis-scheduler/kubernetes/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
   app: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      schedulerName: topsis-scheduler
      containers:
      - name: backend-container
        image: ppreejit/crud-spring-boot
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8020
