topsis-scheduler/kubernetes/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  schedulerName: topsis-scheduler
  containers:
  - name: nginx
    image: nginx
