topsis-scheduler/kubernetes/test-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topsis-scheduler
  namespace: kube-system
  labels:
    app: topsis-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: topsis-scheduler
  template:
    metadata:
      labels:
        app: topsis-scheduler
    spec:
      serviceAccountName: topsis-scheduler
      containers:
      - name: topsis-scheduler
        image: ppreejit/topsis-scheduler:v16
        imagePullPolicy: IfNotPresent
